fix some dark mode styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,32 @@
 
 
 
+/* Light color scheme (Default) */
+/* Can be forced with data-theme="light" */
+[data-theme="light"],
+:root:not([data-theme="dark"]) {
+ --kanban-track-bg-color: lightgrey;
+ --kanban-track-text-color: black;
+ --sidebar-bg-color: #e0e0e0;
+}
 
+/* Dark color scheme (Auto) */
+/* Automatically enabled if user has Dark mode enabled */
+@media only screen and (prefers-color-scheme: dark) {
+  :root:not([data-theme]) {
+    --kanban-track-bg-color: #444;
+    --kanban-track-text-color: #fff;
+    --sidebar-bg-color: #1c1c1c;
+  }
+}
+
+/* Dark color scheme (Forced) */
+/* Enabled if forced with data-theme="dark" */
+[data-theme="dark"] {
+  --kanban-track-bg-color: #444;
+  --kanban-track-text-color: #fff;
+  --sidebar-bg-color: #1c1c1c;
+}
 
 
 
@@ -62,53 +87,7 @@
     height:1.5em;
 }
 
-.toast {
-    background-color: lightcoral;
-    padding: 1.5em;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    border-radius: 0.5em;
-    position: relative;
-    color: greenyellow;
-    opacity: 0.9;
-    &:hover {
-        opacity: 1;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    }
-}
 
-.toast + .toast {
-    margin-top: 0.5em;
-}
-
-.toast-message {
-    display: flex;
-    gap: 1em;
-    align-items: top;
-}
-
-.toast-close-button {
-    position: absolute;
-    top: 0.5em;
-    right: 0.5em;
-    padding: 0;
-    line-height: 1;
-    height: 1em;
-    width: 1em;
-    background: none;
-    border: none;
-    cursor: pointer;
-    color: inherit;
-}
-
-// .toast-success {
-
-// }
-// .toast-danger {
-    
-// }
-// .toast-info {
-    
-// }
 
 // from testing site
 
@@ -157,7 +136,7 @@ header#main-header {
 }
 
 main {
-  background-color: brown;
+  background-color: var(--pico-background-color);
   width: 100%;
   height: 100%;
   display: flex;
@@ -176,7 +155,7 @@ section#main-content {
 }
 
 aside#sidebar {
-  background-color: green;
+  background-color: var(--sidebar-bg-color);
   min-height: 100vh;
   min-width: 100px;
   flex-shrink: 0;
@@ -215,6 +194,7 @@ aside#sidebar {
     height: 56px;
     min-height: unset;
     margin-left: auto;
+    background-color: #ffffff00;
     
 
     & > nav#sidebar-nav > ul {
@@ -250,7 +230,7 @@ aside#sidebar {
 
 
 .list-of-todos {
-  background-color: white;
+  background-color: var(--pico-background-color);
   padding: 0.5rem;
   grid-auto-flow: column;
   column-gap: 0.5rem;
@@ -261,7 +241,8 @@ aside#sidebar {
   .kanban-track {
     margin:0.1rem;
     padding: 8px;
-    background-color: lightgray;
+    background-color: var(--kanban-track-bg-color);
+    color: var(--kanban-track-text-color);
     min-width: 200px;
     border-radius: 8px;
     
